# dico-worker

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
include/: code.h
src/: code.cpp  main.cpp
